--- a/Dogs/app/src/main/res/layout/item_dog.xml
+++ b/Dogs/app/src/main/res/layout/item_dog.xml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+
+        <variable
+            name="dog"
+            type="com.nickhe.dogs.model.DogBreed" />
+
+        <variable
+            name="listener"
+            type="com.nickhe.dogs.view.DogClickListener" />
+
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="125dp"
+        android:onClick="@{listener::onDogClicked}"
         android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/dogId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{String.valueOf(dog.uuid)}"
+            android:visibility="gone" />
+
         <ImageView
-            android:id="@+id/dogImage"
+            android:id="@+id/image"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2" />
+            android:layout_weight="2"
+            android:imageUrl="@{dog.imageUrl}" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -25,14 +46,14 @@
                 style="@style/Titile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="dogName" />
+                android:text="@{dog.dogBreed}" />
 
             <TextView
                 android:id="@+id/lifespan"
                 style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="lifespan" />
+                android:text="@{dog.lifespan}" />
 
         </LinearLayout>
 
