--- a/Dogs/app/src/main/res/navigation/dogs_navigation.xml
+++ b/Dogs/app/src/main/res/navigation/dogs_navigation.xml
@@ -13,6 +13,11 @@
             app:destination="@id/detailFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
+        <action
+            android:id="@+id/actionSettingsFragment"
+            app:destination="@+id/settingsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
 
     <fragment
@@ -30,5 +35,9 @@
             app:argType="integer"
             />
     </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.nickhe.dogs.view.SettingsFragment"
+        android:label="SettingsFragment" />
 
 </navigation>
